--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==1.11
+django-contrib-comments==1.8.0
+django-filter==1.0.4
+djangorestframework==3.6.3
+Markdown==2.6.8
 olefile==0.44
 Pillow==4.2.1
 pytz==2017.2
